# file-hash-verifier

./: Cargo.toml  README.md
src/: file_utils.rs  hashlib.rs  main.rs
ui/: appwindow.slint
